--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-beautifulsoup4==4.12.0
+beautifulsoup4==4.11.2
 bs4==0.0.1
 lxml==4.9.2
 numpy==1.24.2
@@ -6,3 +6,7 @@ praat-parselmouth==0.4.3
 soupsieve==2.4
 tgt==1.4.4
 openpyxl==3.1.2
+pandas==1.1.5
+regex==2022.10.31
+tqdm==4.64.1
+Unidecode==1.3.6
